--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
 alembic==0.8.4
+docutils==0.12
+flake8==2.5.2
 Flask==0.10.1
 Flask-Migrate==1.7.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
+lockfile==0.12.2
 Mako==1.0.3
 MarkupSafe==0.23
+mccabe==0.4.0
+MySQL-python==1.2.5
+nose==1.3.7
+pep8==1.7.0
 pika==0.10.0
+pyflakes==1.0.0
+python-daemon==2.1.1
 python-editor==0.5
 SQLAlchemy==1.0.11
 Werkzeug==0.11.3
 wheel==0.26.0
+WTForms==2.1
